pov-check-health (0.3) UNRELEASED; urgency=low

  * Bugfix for checkinodes on /very/long/device/names.

 -- Marius Gedminas <marius@gedmin.as>  Tue, 23 Jul 2013 15:12:28 +0300

pov-check-health (0.2) precise; urgency=low

  * check-health -v for verbose operation.
  * check-health -h for help operation.
  * check-health -f filename for different config file.
  * All checks in functions.sh were documented.
  * Added manual page for check-health(8).

 -- Marius Gedminas <marius@gedmin.as>  Tue, 23 Jul 2013 11:54:11 +0300

pov-check-health (0.1) precise; urgency=low

  * Initial release.

 -- Marius Gedminas <marius@pov.lt>  Mon, 22 Jul 2013 15:38:14 +0300